Fix nav overflow in Firefox

--- a/app/stylesheets/_global.scss
+++ b/app/stylesheets/_global.scss
@@ -75,7 +75,7 @@ $footer-text-color: #EEE;
 
         padding: 0px 10px;
         text-align: center;
-        width: 75px;
+        width: 80px;
 
         &:first-child {
           @include border-left-radius($standard-radius);
